--- a/Free Zorrara.csproj
+++ b/Free Zorrara.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Program - copia.cs" />
+    <Compile Remove="Respaldo.cs" />
   </ItemGroup>
 
   <ItemGroup>
